--- a/04-beyond-borders.Rmd
+++ b/04-beyond-borders.Rmd
@@ -173,3 +173,5 @@ This problem does not only apply locally: since the effect of $\sigma^2_u$ appli
 ## HIV prevalence study
 
 ## Discussion
+
+@follestad2003modelling
