--- a/06-naomi-aghq.Rmd
+++ b/06-naomi-aghq.Rmd
@@ -321,3 +321,5 @@ knitr::include_graphics(paste0("resources/naomi-aghq/", resource_version, "/depe
 ### Exceedance probabilities
 
 ## Discussion
+
+<!-- Finn Lindgren is working on a method for non-linear predictors, called the [iterative INLA method](https://github.com/inlabru-org/inlabru/blob/55896f10d563c14e34cab577b29b733aac051f86/vignettes/method.Rmd). More [slides](https://informatique-mia.inrae.fr/reseau-resste/sites/default/files/2020-09/slides-Lindgren_Avignon2018.pdf) here -->
