--- a/references.bib
+++ b/references.bib
@@ -1511,12 +1511,13 @@ doi = {10.1201/9781420072884-c30}
   publisher={Oxford University Press}
 }
 
-@book{hyndman2018forecasting,
-  title={Forecasting: principles and practice},
-  author={Hyndman, Rob J and Athanasopoulos, George},
-  year={2018},
-  publisher={OTexts}
+@article{shumway2017time,
+  title={Time Series Analysis and Its Applications With R Examples},
+  author={Shumway, Robert H and Stoffer, David S},
+  publisher={Springer},
+    year={2017}
 }
+
 
 @article{berger2006case,
   title={The case for objective Bayesian analysis},
@@ -1568,4 +1569,44 @@ doi = {10.1201/9781420072884-c30}
   publisher={Wiley Online Library}
 }
 
+@article{gelman2020bayesian,
+  title={Bayesian workflow},
+  author={Gelman, Andrew and Vehtari, Aki and Simpson, Daniel and Margossian, Charles C and Carpenter, Bob and Yao, Yuling and Kennedy, Lauren and Gabry, Jonah and B{\"u}rkner, Paul-Christian and Modr{\'a}k, Martin},
+  journal={arXiv preprint arXiv:2011.01808},
+  year={2020}
+}
+
+@book{chopin2020introduction,
+  title={An introduction to sequential Monte Carlo},
+  author={Chopin, Nicolas and Papaspiliopoulos, Omiros and others},
+  volume={4},
+  year={2020},
+  publisher={Springer}
+}
+
+@book{bivand2008applied,
+  title={Applied spatial data analysis with R},
+  author={Bivand, Roger S and Pebesma, Edzer J and G{\'o}mez-Rubio, Virgilio and Pebesma, Edzer Jan},
+  volume={747248717},
+  year={2008},
+  publisher={Springer}
+}
+
+@article{gelfand2001change,
+  title={On the change of support problem for spatio-temporal data},
+  author={Gelfand, Alan E and Zhu, Li and Carlin, Bradley P},
+  journal={Biostatistics},
+  volume={2},
+  number={1},
+  pages={31--45},
+  year={2001},
+  publisher={Oxford University Press}
+}
+
+@techreport{follestad2003modelling,
+  title={Modelling spatial variation in disease risk using Gaussian Markov random field proxies for Gaussian random fields},
+  author={Follestad, Turid and Rue, H{\aa}vard},
+  year={2003},
+  institution={SIS-2003-305}
+}
 
