Test display of warning

--- a/README.Rmd
+++ b/README.Rmd
@@ -4,6 +4,9 @@ output: github_document
 
 # Bayesian spatio-temporal methods for small-area estimation of HIV indicators
 
+> [!WARNING]  
+> Critical content demanding immediate user attention due to potential risks.
+
 PhD in [Modern Statistics and Statistical Machine Learning](https://statml.io/) at [Imperial College London](https://www.imperial.ac.uk/).
 
 Supervised by: [Seth Flaxman](https://sethrf.com/) and [Jeff Eaton](https://www.imperial.ac.uk/people/jeffrey.eaton).
